// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textLineThroughMode renders 0 1`] = `
Array [
  .c0 {
  text-line-through-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders function 1`] = `
Array [
  .c0 {
  text-line-through-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders invalid theme path 1`] = `
Array [
  .c0 {
  text-line-through-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders negative number 1`] = `
Array [
  .c0 {
  text-line-through-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-line-through-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-line-through-mode: July;
}

@media May {
  .c0 {
    text-line-through-mode: August;
  }
}

@media April {
  .c0 {
    text-line-through-mode: September;
  }
}

@media January {
  .c0 {
    text-line-through-mode: November;
  }
}

@media April {
  .c0 {
    text-line-through-mode: August;
  }
}

@media June {
  .c0 {
    text-line-through-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: July;
}

@media May {
  .c0 {
    text-line-through-mode: August;
  }
}

@media April {
  .c0 {
    text-line-through-mode: September;
  }
}

@media January {
  .c0 {
    text-line-through-mode: November;
  }
}

@media April {
  .c0 {
    text-line-through-mode: August;
  }
}

@media June {
  .c0 {
    text-line-through-mode: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-mode: November;
  }
}

@media April {
  .c0 {
    text-line-through-mode: January;
  }
}

@media January {
  .c0 {
    text-line-through-mode: December;
  }
}

@media April {
  .c0 {
    text-line-through-mode: April;
  }
}

@media June {
  .c0 {
    text-line-through-mode: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-mode: November;
  }
}

@media April {
  .c0 {
    text-line-through-mode: January;
  }
}

@media January {
  .c0 {
    text-line-through-mode: December;
  }
}

@media April {
  .c0 {
    text-line-through-mode: April;
  }
}

@media June {
  .c0 {
    text-line-through-mode: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-line-through-mode: July;
  }
}

@media April {
  .c0 {
    text-line-through-mode: August;
  }
}

@media January {
  .c0 {
    text-line-through-mode: September;
  }
}

@media April {
  .c0 {
    text-line-through-mode: November;
  }
}

@media June {
  .c0 {
    text-line-through-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-line-through-mode: July;
  }
}

@media April {
  .c0 {
    text-line-through-mode: August;
  }
}

@media January {
  .c0 {
    text-line-through-mode: September;
  }
}

@media April {
  .c0 {
    text-line-through-mode: November;
  }
}

@media June {
  .c0 {
    text-line-through-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-mode: January;
  }
}

@media April {
  .c0 {
    text-line-through-mode: December;
  }
}

@media January {
  .c0 {
    text-line-through-mode: April;
  }
}

@media April {
  .c0 {
    text-line-through-mode: May;
  }
}

@media June {
  .c0 {
    text-line-through-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-mode: January;
  }
}

@media April {
  .c0 {
    text-line-through-mode: December;
  }
}

@media January {
  .c0 {
    text-line-through-mode: April;
  }
}

@media April {
  .c0 {
    text-line-through-mode: May;
  }
}

@media June {
  .c0 {
    text-line-through-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders postitive number 1`] = `
Array [
  .c0 {
  text-line-through-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders string 1`] = `
Array [
  .c0 {
  text-line-through-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughMode renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textLineThroughMode renders valid theme path 1`] = `
Array [
  .c0 {
  text-line-through-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
